test/functions/jplevyak/zeroarity-bound-error-2.good
Error: Unresolved call ':int()' (zeroarity-bound-error-2.chpl:9)
Candidates are:
  :string(i: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_base.chpl:298)
  :_ddata(i: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_base.chpl:352)
  :_ddata(i: int, _setterTokenDummy: _setterTokenType, val: _unknownType) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_base.chpl:355)
  :string(s: _aseq) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_seq.chpl:205)
  :seq(i: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_seq.chpl:20)
  :seq(i: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_seq.chpl:20)
  :_tuple(i: _intLiteral64) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_htuple.chpl:4)
  :_tuple(i: _intLiteral64, _setterTokenDummy: _setterTokenType, y: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_htuple.chpl:7)
  :_htuple(i: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_htuple.chpl:30)
  :_htuple(i: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_htuple.chpl:30)
  :_adomain(dim: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:95)
  :_aarray(d: _adomain) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:232)
  :_aarray(d: _adomain, _setterTokenDummy: _setterTokenType, v: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:239)
  :_aarray(ind: _unknownType) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:244)
  :_aarray(ind: _unknownType, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:244)
  :_aarray(_e0_ind: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _e2_ind: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _e2_ind: int, _e3_ind: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _e2_ind: int, _e3_ind: int, _e4_ind: int) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _e2_ind: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _e2_ind: int, _e3_ind: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_aarray(_e0_ind: int, _e1_ind: int, _e2_ind: int, _e3_ind: int, _e4_ind: int, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_adomain.chpl:256)
  :_iarray(ind: _unknownType) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_indefinite.chpl:116)
  :_iarray(ind: _unknownType, _setterTokenDummy: _setterTokenType, _lvalue: any) (/ptmp/deitz/work1/chapel/modules/standard/_chpl_indefinite.chpl:116)
